# devlogix_auth_service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile-dev  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  makefile  multiple-databases.sh  pyproject.toml  requirements-dev.txt  requirements.txt  test.py
auth/: pyproject.toml
auth/src/auth/: main.py
auth/src/auth/api/: __init__.py  auth.py  swagger.py  users.py
auth/src/auth/core/: base.py  config.py  decorators.py  jwt.py
auth/tests/: conftest.py
auth/tests/api/: constants.py  test_01_user_creation.py  test_02_user_login.py  test_03_logout_user.py
auth_service/: alembic.ini  pyproject.toml
auth_service/app/: app.py
auth_service/app/api/: __init__.py  auth.py
auth_service/app/application/protocols/: repository.py  unit_of_work.py
auth_service/app/application/repositories/: tokens.py  users.py
auth_service/app/application/services/: __init__.py  tokens.py  users.py
auth_service/app/core/: base.py  config.py  exceptions.py  jwt.py  oauth2.py
auth_service/app/domain/models/: __init__.py  tokens.py  users.py
auth_service/app/domain/schemas/: users.py
auth_service/app/infrastructure/: db.py
auth_service/app/infrastructure/migrations/: env.py
auth_service/src/: app.py
auth_service/src/api/: auth.py
auth_service/src/application/protocols/: repository.py  unit_of_work.py
auth_service/src/application/repositories/: tokens.py  users.py
auth_service/src/application/services/: tokens.py  users.py
auth_service/src/core/: __init__.py  base.py  constants.py  dependencies.py  http_error.py  jwt.py  oauth2.py  password.py  swagger.py
auth_service/src/domain/models/: __init__.py  tokens.py  (+1 more)
auth_service/src/infrastructure/: db.py
auth_service/tests/: conftest.py  test_01_auth.py
bot/: .dockerignore  Dockerfile  LICENSE  alembic.ini  entrypoint.sh  pyproject.toml
bot/app/: .gitignore  main.py
bot/app/core/: settings.py
bot/app/handlers/: help_bot.py  routers.py  start.py
bot/app/models/: tasks.py
bot/app/repositories/: repository.py  users.py
bot/app/services/: date.py  exceptions.py  tasks.py
bot/src/core/: logging_config.py
bot/src/handlers/: states.py  tasks.py
bot/src/middlewares/: db.py  throttling.py
bot/src/models/: users.py
bot/src/repositories/: repository.py  tasks.py
bot/src/services/: unit_of_work.py  users.py
(+150 files in other folders)
