[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project]
name = "auth"
version = "0.1.0"
description = "Auth services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.1",
    "pyjwt==2.8.0",
    "passlib==1.7.4",
    "fastapi==0.109.*",
    "sqlalchemy==2.0.25",
    "email-validator>=2.0.0",
    "pydantic==2.6.1",
    "uvicorn==0.27.0",
    "asyncpg==0.29.0"
]

[project.optional-dependencies]
dev = [
    "aiosqlite==0.19.0",
    "httpx==0.26.0",
    "pytest<=8.0.0",
    "pytest-asyncio==0.23.4"
]
