[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["AngryWolf <qrer71@yandex.ru>"]
readme = "README.md"
packages = [{ include = "auth", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.25"
fastapi = "^0.109.1"
pydantic = {extras = ["email"], version = "^2.6.0"}
passlib = "^1.7.4"
alembic = "^1.13.1"
uvicorn = "^0.27.0.post1"
pyjwt = "^2.8.0"


[tool.poetry.group.tests.dependencies]
pytest = "<8.0.0"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.4"


[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
