[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["AngryWolf"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.1"
sqlalchemy = "^2.0.23"
pydantic = "^2.4.2"
aiogram = "<=3.1.1"
psycopg = "^3.1.12"
cachetools = "^5.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
